Use LauncherHelper. Fixed flickering of the dashboard widgets #1475

--- a/src/main/resources/assets/styles/launcher.less
+++ b/src/main/resources/assets/styles/launcher.less
@@ -73,7 +73,7 @@ button.launcher-button {
   }
 
   span {
-    line-height: @app-header-height - 4px;
+    line-height: @app-header-height - 2px;
   }
 
   &::-moz-focus-inner {
